syntax = "proto3";
package assetmantle.orders.transactions.take;

import "gogoproto/gogo.proto";
import "assetmantle/base/ids/internal/identityID.v1.proto";
import "assetmantle/base/ids/internal/orderID.v1.proto";

message Message {
  string from = 1;
  assetmantle.base.ids.IdentityID from_i_d = 2;
  string taker_ownable_split = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  assetmantle.base.ids.OrderID order_i_d = 4;
}
